<resources>
  <string name="app_name">Nox\' Lil\' Bunq App</string>
  <string name="title">Nox\' bunq assignment</string>
  <string name="api_quest">Insert your API or do you want to play in the Sandbox?</string>
  <string name="greeting">Hey, %s!</string>
  <string name="change">Change?</string>
  <string name="balances_view">Your current balance: %s</string>
  <string name="list_payments_refresh">&#8635;<!-- unicode "clockwise open circle" --></string>
  <string name="new_payment_button">Make a new payment!</string>
  <string name="new_payment_title">Who do you want to pay?</string>
  <string name="new_payment_hint_pointer_value">Their known e-mail, phone number or IBAN.</string>
  <string name="new_payment_hint_description">Add some nice words or a reason!</string>
  <string name="new_payment_hint_amount">The amount to pay (in cents).</string>
  <string name="new_payment_confirm">Make the payment!</string>
  <string name="api_question">Hey there! Use your Production API. Or play around in a lil\' sandbox! Or just use the last setup.</string>
  <string name="api_use_existing">Use Exisiting</string>
  <string name="api_use_new_sandbox">Create new Sandbox</string>
  <string name="api_use_production">Use Production API Key</string>
  <string name="api_key_hint">Insert your API Key</string>

  <!-- Arrays -->
  <string-array name="new_payment_pointer_type_items">
    <item>EMAIL</item>
    <item>PHONE_NUMBER</item>
    <item>IBAN</item>
  </string-array>
  <string-array name="currency_codes_ISO_4217">
    <item>AED</item>
    <item>AFN</item>
    <item>ALL</item>
    <item>AMD</item>
    <item>ANG</item>
    <item>AOA</item>
    <item>ARS</item>
    <item>AUD</item>
    <item>AWG</item>
    <item>AZN</item>
    <item>BAM</item>
    <item>BBD</item>
    <item>BDT</item>
    <item>BGN</item>
    <item>BHD</item>
    <item>BIF</item>
    <item>BMD</item>
    <item>BND</item>
    <item>BOB</item>
    <item>BOV</item>
    <item>BRL</item>
    <item>BSD</item>
    <item>BTN</item>
    <item>BWP</item>
    <item>BYN</item>
    <item>BZD</item>
    <item>CAD</item>
    <item>CDF</item>
    <item>CHE</item>
    <item>CHF</item>
    <item>CHW</item>
    <item>CLF</item>
    <item>CLP</item>
    <item>CNY</item>
    <item>COP</item>
    <item>COU</item>
    <item>CRC</item>
    <item>CUC</item>
    <item>CUP</item>
    <item>CVE</item>
    <item>CZK</item>
    <item>DJF</item>
    <item>DKK</item>
    <item>DOP</item>
    <item>DZD</item>
    <item>EGP</item>
    <item>ERN</item>
    <item>ETB</item>
    <item>EUR</item> <!-- 48th item -->
    <item>FJD</item>
    <item>FKP</item>
    <item>GBP</item>
    <item>GEL</item>
    <item>GHS</item>
    <item>GIP</item>
    <item>GMD</item>
    <item>GNF</item>
    <item>GTQ</item>
    <item>GYD</item>
    <item>HKD</item>
    <item>HNL</item>
    <item>HRK</item>
    <item>HTG</item>
    <item>HUF</item>
    <item>IDR</item>
    <item>ILS</item>
    <item>INR</item>
    <item>IQD</item>
    <item>IRR</item>
    <item>ISK</item>
    <item>JMD</item>
    <item>JOD</item>
    <item>JPY</item>
    <item>KES</item>
    <item>KGS</item>
    <item>KHR</item>
    <item>KMF</item>
    <item>KPW</item>
    <item>KRW</item>
    <item>KWD</item>
    <item>KYD</item>
    <item>KZT</item>
    <item>LAK</item>
    <item>LBP</item>
    <item>LKR</item>
    <item>LRD</item>
    <item>LSL</item>
    <item>LYD</item>
    <item>MAD</item>
    <item>MDL</item>
    <item>MGA</item>
    <item>MKD</item>
    <item>MMK</item>
    <item>MNT</item>
    <item>MOP</item>
    <item>MRU</item>
    <item>MUR</item>
    <item>MVR</item>
    <item>MWK</item>
    <item>MXN</item>
    <item>MXV</item>
    <item>MYR</item>
    <item>MZN</item>
    <item>NAD</item>
    <item>NGN</item>
    <item>NIO</item>
    <item>NOK</item>
    <item>NPR</item>
    <item>NZD</item>
    <item>OMR</item>
    <item>PAB</item>
    <item>PEN</item>
    <item>PGK</item>
    <item>PHP</item>
    <item>PKR</item>
    <item>PLN</item>
    <item>PYG</item>
    <item>QAR</item>
    <item>RON</item>
    <item>RSD</item>
    <item>RUB</item>
    <item>RWF</item>
    <item>SAR</item>
    <item>SBD</item>
    <item>SCR</item>
    <item>SDG</item>
    <item>SEK</item>
    <item>SGD</item>
    <item>SHP</item>
    <item>SLL</item>
    <item>SOS</item>
    <item>SRD</item>
    <item>SSP</item>
    <item>STN</item>
    <item>SVC</item>
    <item>SYP</item>
    <item>SZL</item>
    <item>THB</item>
    <item>TJS</item>
    <item>TMT</item>
    <item>TND</item>
    <item>TOP</item>
    <item>TRY</item>
    <item>TTD</item>
    <item>TWD</item>
    <item>TZS</item>
    <item>UAH</item>
    <item>UGX</item>
    <item>USD</item>
    <item>USN</item>
    <item>UYI</item>
    <item>UYU</item>
    <item>UYW</item>
    <item>UZS</item>
    <item>VES</item>
    <item>VND</item>
    <item>VUV</item>
    <item>WST</item>
    <item>XAF</item>
    <item>XAG</item>
    <item>XAU</item>
    <item>XBA</item>
    <item>XBB</item>
    <item>XBC</item>
    <item>XBD</item>
    <item>XCD</item>
    <item>XDR</item>
    <item>XOF</item>
    <item>XPD</item>
    <item>XPF</item>
    <item>XPT</item>
    <item>XSU</item>
    <item>XTS</item>
    <item>XUA</item>
    <item>XXX</item>
    <item>YER</item>
    <item>ZAR</item>
    <item>ZMW</item>
    <item>ZWL</item>
  </string-array>
</resources>
